overflow fixing &  varibels setting

--- a/css/main.css
+++ b/css/main.css
@@ -97,15 +97,14 @@ a {
 }
 
 .main h2 {
-    padding-left: 8%;
     font-family:  'Roboto', sans-serif;
-    margin-left: 0%; 
 }
    
 .profile {
     position: relative;
+    flex: 1;
+    overflow: hidden;
     width: 100%;
-    height: 500px;
     display: flex;
     flex-direction: row;
     justify-content: left;
@@ -123,11 +122,12 @@ a {
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center; 
-    width: 22.8%;
-    height: 79%;
+    width: 330px;
+    height: 330px;
     overflow: hidden;
     background-image: url(../img/profile2.jpg);
     transition:1s;
+    z-index: 99;
 }
 
 #paragraph {
@@ -155,9 +155,11 @@ a {
 
 #resume {
     position: relative;
+    width: 100%;
     margin-top: 3%;
     text-align: center;
     font-size: 2em;
+    background-color: rgb(252, 248, 204);
 }
 
 .resume h4 {
@@ -523,8 +525,26 @@ a {
 }
 /*extra*/
 
+.lang{
+  margin-top: 6%;
+  width: 100%;
+  overflow: hidden;
+  background-color: rgba(255, 254, 169, 0.534);
+}
+
+.lang>h2{
+  background-color: rgba(255, 254, 169, 0.76);
+}
+
+.lang>p{
+    font-weight: 580;
+    text-align: left;
+}
+
 #protfolio {
-    margin-top: 10%;
+    margin-top: 5%;
+    background-color: rgb(102, 102, 102);
+    color: #fff;
 }
 
 .protfolio {
@@ -532,9 +552,10 @@ a {
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-around;
+    flex: 1;
+    overflow: hidden;
     background-color: rgb(136, 136, 136);
     padding-top: 3%;
-    height: 700px;
     font-family: 'Noto Sans TC', sans-serif;
     font-size: 2em;
     line-height: 144px;
@@ -631,10 +652,6 @@ a {
     #paragraph {
         font-size: 12px;
         align-self: center;
-    }
-
-    #resume {
-        margin-top: 180px;
     }
 
     .resume{
